plantit/front_end/src/scss/main.sass
/**
  *
  * Styles shared across the entire website.
  *
  **/
@import '_colors'

// Base grayscale colors definitions
$white: #fff !default
$gray-100: #f8f9fa !default
$gray-200: #e9ecef !default
$gray-300: #dee2e6 !default
$gray-400: #ced4da !default
$gray-500: #adb5bd !default
$gray-600: #6c757d !default
$gray-700: #495057 !default
$gray-800: #343a40 !default
$gray-900: #212529 !default
$black: #000 !default

// Base colors definitions
$blue: #007bff !default
$indigo: #6610f2 !default
$purple: #6f42c1 !default
$pink: #e83e8c !default
$red: #ff7272 // #dc3545 !default
$orange: #fd7e14 !default
$yellow: #ffc107 !default
$green: #d6df5D // #28a745 !default
$teal: #20c997 !default
$cyan: #17a2b8 !default

// Theme color default definitions
$primary: $blue !default
$secondary: $color-box-background
$success: $green !default
$info: $color-highlight !default
$warning: #e2e3b0!default
$danger: $red !default
$light: $gray-100 !default
$dark: $gray-800 !default // $color-disabled

// This table defines the theme colors (variant names)
$theme-colors: () !default
$theme-colors: map-merge(('primary': $primary, 'secondary': $secondary, 'success': $success, 'info': $info, 'warning': $warning, 'danger': $danger, 'light': $light, 'dark': $dark ), $theme-colors)

// Bootstrap and its default variables
@import '../../node_modules/bootstrap/scss/bootstrap'
// BootstrapVue and its default variables
@import '../../node_modules/bootstrap-vue/src/index.scss'

.dashboard
  font-weight: 500

.icon
  color: $dark

.logo
  background-color: white
  // border-bottom: 1px solid $white // $color-button
  box-shadow: 1px 1px 2px 0 transparent // 0 1px 2px $success

.dropdown-toggle:after
    display: none

.dropdown-menu
  right: 0
  left: auto
  width: 300px !important

.btn-white
  color: $dark
  border: 1px solid transparent !important

.btn-white:hover
  color: $dark
  border: 1px solid $secondary !important

.btn-success
  color: $dark

.btn-success:hover
  border: 1px solid $color-highlight !important
  background-color: $color-highlight
  color: $dark

.badge-danger
  color: white

.btn-outline-danger
  color: $red
  border: 1px solid transparent !important

.btn-outline-danger:hover
  color: $red
  background-color: transparent
  border: 1px solid $red !important

.btn-outline-light
  border: 1px solid transparent !important

.btn-outline-light:hover
  color: $success
  background-color: transparent
  border: 1px solid transparent !important

.btn-outline-dark
  border: 1px solid transparent !important

.btn-outline-dark:hover
  color: $color-highlight
  background-color: $dark
  border: 1px solid $dark !important

.btn-outline-secondary:hover
  color: $success
  background-color: $secondary
  border: 1px solid $secondary !important


.btn-outline-success:hover
  color: $dark
  background-color: $success
  border: 1px solid $dark !important

.btn-outline-dark:after
  color: $color-highlight !important
  box-shadow: none

.btn-dark
    border: 2px solid transparent !important

.btn-dark:hover
  color: $color-highlight !important

.bold-btn:hover
  border: 2px solid $color-highlight !important
  box-shadow: none

.b-form-input
  background-color: transparent
  box-shadow: none
  border: 1px solid transparent

.b-form-input:focus
  color: $dark
  background-color: transparent
  border-bottom: 1px solid $secondary
  border-top: 1px solid transparent
  border-left: 1px solid transparent
  border-right: 1px solid transparent
  box-shadow: none

.navbar-nav > li
  padding-left: 10px
  padding-right: 10px
  font-size: 16pt

.dark-card
  background-color: $color-disabled

body
  font-family: 'Helvetica Neue', "Courier New", serif
  font-weight: 300
  color: $dark

.nav-button
  background-color: $color-button
  border-radius: 20px
  min-height: 50px
  border-style: none
  font-weight: 800

  &:hover
    background-color: $color-highlight

.content-box
  background-color: $color-box-background
  margin: 10px
  padding: 5px
  border-radius: 10px

.center-container
  float: none
  margin: 0 auto

.collection-id
  background-color: $dark
  color: $color-button
  border: 1px solid $color-box-background
  margin: 5px

.collection-name
  background-color: $dark
  color: $color-button
  border: 1px solid $color-box-background
  margin: 5px

.user-profile
  background-color: white
  color: $color-box-background
  border: 1px solid transparent
  margin: 5px

.user-profile:hover
  background-color: white
  color: $color-box-background
  border: 1px solid $color-box-background
  margin: 5px

.plantit-btn
  color: white
  background-color: $color-button
  border: 1px solid $color-button

.plantit-btn:hover
  color: white
  background-color: $color-highlight
  border: 1px solid $color-highlight

.plantit-btn-alternate
  color: $color-button
  background-color: white
  border: 1px solid $color-button

.plantit-btn-alternate:hover
  color: white
  background-color: $color-highlight
  border: 1px solid $color-highlight

.fa-sign-out-alt
  font-size: 2em
  color: $color-box-background
  padding-left: 10px

.fa-user-circle
  font-size: 2em
  color: $color-box-background
  padding-left: 10px

.dropbox
  outline: 2px dashed grey /* the dash box */
  outline-offset: -10px
  background: lightcyan
  color: dimgray
  padding: 10px 10px
  min-height: 200px /* minimum height */
  position: relative
  cursor: pointer

.input-file
  opacity: 0 /* invisible but it's there! */
  width: 100%
  height: 200px
  position: absolute
  cursor: pointer

.dropbox:hover
  background: lightblue /* when mouse over to the drop zone, change color */

.dropbox p
  font-size: 1.2em
  text-align: center
  padding: 50px 0

.drop-active
  top: 0
  bottom: 0
  right: 0
  left: 0
  position: fixed
  z-index: 9999
  opacity: .6
  text-align: center
  background: #000

.drop-active h3
  margin: -.5em 0 0
  position: absolute
  top: 50%
  left: 0
  right: 0
  -webkit-transform: translateY(-50%)
  -ms-transform: translateY(-50%)
  transform: translateY(-50%)
  font-size: 40px
  color: #fff
  padding: 0

button
  font-weight: 300 !important

h1
  font-weight: 300
  font-family: "Roboto", "Lucida Grande", "DejaVu Sans", "Bitstream Vera Sans", Verdana, Arial, sans-serif
  color: $dark !important

h2
  font-weight: 300
  font-family: "Roboto", "Lucida Grande", "DejaVu Sans", "Bitstream Vera Sans", Verdana, Arial, sans-serif
  color: $dark !important

h3
  font-weight: 300
  font-family: "Roboto", "Lucida Grande", "DejaVu Sans", "Bitstream Vera Sans", Verdana, Arial, sans-serif
  color: $dark !important

h4
  font-weight: 300
  font-family: "Roboto", "Lucida Grande", "DejaVu Sans", "Bitstream Vera Sans", Verdana, Arial, sans-serif
  color: $dark !important

h5
  font-weight: 300
  font-family: "Roboto", "Lucida Grande", "DejaVu Sans", "Bitstream Vera Sans", Verdana, Arial, sans-serif
  color: $dark !important

a
  color: $dark

a:link
  font-weight: 300
  font-family: "Roboto", "Lucida Grande", "DejaVu Sans", "Bitstream Vera Sans", Verdana, Arial, sans-serif
  color: $dark
  // text-decoration: underline
  // text-decoration-color: $color-button

.text-dark2
  color: $dark !important

.text-light2
  color: $light !important

.bg-light2
  background-color: $dark !important

.bg-light2
  background-color: $light !important

.theme-dark
  color: $white !important
  background-color: $dark !important
  border-color: $color-disabled

.theme-container-dark
  color: $gray-200 !important
  background-color: $gray-700 !important
  border-color: $color-disabled

.theme-secondary
  color: $success !important
  background-color: $secondary !important
  border-color: $color-disabled

.theme-light
  color: $dark !important
  background-color: $white !important
  border-color: $color-disabled

.theme-container-light
  color: $gray-700 !important
  background-color: $gray-100 !important
  border-color: $color-disabled

